--- a/app/styles/partials/vitro-modules.scss
+++ b/app/styles/partials/vitro-modules.scss
@@ -373,9 +373,6 @@
 	grid-auto-rows: 1fr;
 	margin: 0 15px;
 }
-.card {
-	display: flex;
-}
 
 @media(min-width:768px) {
 	.card-container {
@@ -383,20 +380,7 @@
 		grid-template-columns: 1fr 1fr 1fr;
 		grid-auto-rows: 1fr;
 		grid-gap: 0 30px;
-
-		.img-container {
-			height: 155px !important;
-		}
-
-		.img-responsive {
-			height: 155px !important;
-		}
-   }
-	
-	.main-section .card-container .img-container, 
-	.main-section .card-container .img-responsive {
-		height: 150px !important;
-	}
+	}	
 }
 
 @media(min-width:992px) {
@@ -405,37 +389,8 @@
 		grid-template-columns: 1fr 1fr 1fr;
 		grid-auto-rows: 1fr;
 		grid-gap: 0 30px;
-
-		.img-container {
-			height: 201px !important;
-		}
-
-		.img-responsive {
-			height: 201px !important;
-		}
-	}
-
-	.main-section .card-container .img-container, .main-section .card-container .img-responsive {
-		height: 150px !important;
 	}
 }
-
-@media(min-width:1200px) {
-	.card-container {
-		.img-container {
-			height: 242px !important;
-		}
-
-		.img-responsive {
-			height: 242px !important;
-		}
-	}
-
-	.main-section .card-container .img-container, .main-section .card-container .img-responsive {
-		height: 182px !important;
-   }
-}
-
 
 /* Callout Image Small Inset */
 
